<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddProductFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/gradient1"/>
        <ProgressBar
            android:layout_weight="1"
            android:id="@+id/progressBar_cyclic"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:minWidth="40dp"
            android:indeterminateDrawable="@drawable/progress_bar_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/celias_bold"
            android:text="@string/add_product_title"/>

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_developer"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            android:layout_marginTop="30dp"
            android:elevation="20dp"
            android:paddingVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:background="@color/white">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productNameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:hintTextColor="@color/magenta"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/enter_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productNameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTypeTextInputLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productNameTextInputLayout"
                android:layout_margin="10dp"
                app:hintTextColor="@color/magenta"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/enter_type">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productTypeTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productPriceTextInputLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/productTypeTextInputLayout"
                android:layout_margin="10dp"
                app:hintTextColor="@color/magenta"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/enter_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productPriceTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/productTaxTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:hintTextColor="@color/magenta"
                app:layout_constraintTop_toBottomOf="@id/productPriceTextInputLayout"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                android:hint="@string/enter_tax">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/productTaxTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="20dp"
                android:background="@color/blue_200"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/app_fonts"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>